--- a/Linear Regression using Gradient Descent.ipynb
+++ b/Linear Regression using Gradient Descent.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ E = \\frac{1}{n} \\sum_{i=0}^{n}(y_i-\\bar{y_i})^2$$"
+    "$$ MSE = \\frac{1}{n} \\sum_{i=1}^{n}(y_i-\\hat{y_i})^2$$"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ E = \\frac{1}{n} \\sum_{i=0}^{n}(y_i-(mx_1 + c))^2$$"
+    "$$ MSE = \\frac{1}{n} \\sum_{i=1}^{n}(y_i-(mx_1 + c))^2$$"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$D_m = \\frac{-2}{n} \\sum_{i=0}^{n}x_i(y_i-\\bar{y_i}) $$"
+    "$$D_m = \\frac{-2}{n} \\sum_{i=0}^{n}x_i(y_i-\\hat{y_i}) $$"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$D_c = \\frac{-2}{n} \\sum_{i=0}^{n}(y_i-\\bar{y_i}) $$"
+    "$$D_c = \\frac{-2}{n} \\sum_{i=0}^{n}(y_i-\\hat{y_i}) $$"
    ]
   },
   {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -337,32 +337,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = data.iloc[:, :1]\n",
-    "# X needs to be 2D arrary in sklearn to be handled in the fitting function, thus this slicing method is used\n",
+    "X_d = data.iloc[:, :1]\n",
+    "# X_d needs to be 2D arrary in sklearn to be handled in the fitting function, thus this slicing method is used\n",
     "# data.iloc[:, :1] meaning that it's taking the 0 to 1-1 column of the dataframe (slicing)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2873573700109313 9.908606190326537\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "regressor = LinearRegression()\n",
-    "regressor = regressor.fit(X, Y)\n",
+    "regressor = regressor.fit(X_d, Y)\n",
     "m_d = regressor.coef_[0]\n",
-    "c_d = regressor.intercept_"
+    "c_d = regressor.intercept_\n",
+    "print (m_d, c_d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -402,41 +413,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 103,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(99, 1)"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# again, change it back to the sklearn model\n",
-    "X = data.iloc[:, :1]\n",
-    "X.shape"
+    "### Compare r-squared of the model vs. sklearn default model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5865710901999908 0.5823089364907124\n"
+     ]
+    }
+   ],
    "source": [
     "# compute with formulas from the theory for gradient descent\n",
     "yhat = Y_pred\n",
     "SS_Residual = sum((Y-yhat)**2)       \n",
     "SS_Total = sum((Y-np.mean(Y))**2) \n",
     "r_squared = 1 - (float(SS_Residual))/SS_Total\n",
-    "adjusted_r_squared = 1 - (1-r_squared)*(len(Y)-1)/(len(Y)-X.shape[1]-1)"
+    "adjusted_r_squared = 1 - (1-r_squared)*(len(Y)-1)/(len(Y)-1-1)\n",
+    "# the (len(Y)-0-1) is correspond to n-k-1. the k is the number of independent variables: 1\n",
+    "print(r_squared, adjusted_r_squared)"
    ]
   },
   {
@@ -463,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -474,13 +480,13 @@
        "0.5871609494806326"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regressor.score(X, Y)"
+    "regressor.score(X_d, Y)"
    ]
   },
   {
@@ -488,6 +494,158 @@
    "metadata": {},
    "source": [
     "Looks like in this case, the sklearn default LR outperforms the basic gradident descent method we tried out. We can try adjust learning rate and starting point for a change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3274025661186528 7.8662505351010275\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Building the model \n",
+    "m = 1\n",
+    "c = 1\n",
+    "# Starting point\n",
+    "\n",
+    "L = 0.0002  # The learning Rate\n",
+    "epochs = 100000  # The number of iterations to perform gradient descent\n",
+    "\n",
+    "n = float(len(X)) # Number of elements in X\n",
+    "\n",
+    "# Performing Gradient Descent \n",
+    "for i in range(epochs): \n",
+    "    Y_pred = m*X + c  # The current predicted value of Y\n",
+    "    D_m = (-2/n) * sum(X * (Y - Y_pred))  # Derivative wrt m\n",
+    "    D_c = (-2/n) * sum(Y - Y_pred)  # Derivative wrt c\n",
+    "    m = m - L * D_m  # Update m\n",
+    "    c = c - L * D_c  # Update c\n",
+    "    \n",
+    "print (m, c)\n",
+    "# Making predictions\n",
+    "Y_pred = m*X + c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5865711075639763 0.5823089540337081\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compute with formulas from the theory for gradient descent\n",
+    "yhat = Y_pred\n",
+    "SS_Residual = sum((Y-yhat)**2)       \n",
+    "SS_Total = sum((Y-np.mean(Y))**2) \n",
+    "r_squared = 1 - (float(SS_Residual))/SS_Total\n",
+    "adjusted_r_squared = 1 - (1-r_squared)*(len(Y)-1)/(len(Y)-1-1)\n",
+    "# the (len(Y)-0-1) is correspond to n-k-1. the k is the number of independent variables: 1\n",
+    "print(r_squared, adjusted_r_squared)\n",
+    "# 0.5864340484980364 0.5821704819877068 (for starting point (0, 0) and the others remaining the same)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the tuning experience just now, I can see that the r-squares do change and can be gradually improved. Increasing the learning rate to 0.002 slightly increased the r-squared. However, when the learning rate was increased to 0.01, the gradient descent failed to converge. Increasing the number of rounds to 10,000 also improved the r-squared slightly. When I increased the number of rounds to 100,000, the r-square improved quite a bit and the running time also became longer. The last attempt was to move the starting point to (1,1) and the r-squared again slightly improved."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare mean squared error of the model vs. sklearn default model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As mentioned previously, the eqation for mean squared error is as below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ MSE = \\frac{1}{n}\\sum_{i=1}^{n}(y_1-\\hat{y_1})$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "107.62398490782397 107.47043700950915\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MSE for gradient descent\n",
+    "mse_gd = 1/n*sum((Y - Y_pred)**2)\n",
+    "# MSE for default\n",
+    "mse_df = 1/n*sum((Y - Y_pred_d)**2)\n",
+    "print(mse_gd, mse_df)\n",
+    "# 107.62398490782397 107.47043700950915"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    -10.007533\n",
+       "1    -26.979430\n",
+       "2      0.661098\n",
+       "3     -0.031536\n",
+       "4     -2.850617\n",
+       "        ...    \n",
+       "94     7.260559\n",
+       "95    -1.115408\n",
+       "96    10.943096\n",
+       "97    -5.555537\n",
+       "98    12.232544\n",
+       "Length: 99, dtype: float64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y - Y_pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The default sklearn LR algorithm still outperforms the tunned gradient descent algorithm by a little bit."
    ]
   }
  ],
