just to record my learning progress

--- a/N Days of Data Science.ipynb
+++ b/N Days of Data Science.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 21-23 | Coursera Machine Learning (Week 1)"
+    "## Day 21-23 | Coursera Machine Learning (Week 1)"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 24 | Linear Regression using Gradient Descent"
+    "## Day 24 | Linear Regression using Gradient Descent"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 25 | Starting this notebook for recording"
+    "# Day 25 | Starting this Notebook for Recording"
    ]
   },
   {
