--- a/N Days of Data Science.ipynb
+++ b/N Days of Data Science.ipynb
@@ -37,9 +37,10 @@
    "metadata": {},
    "source": [
     "I started with NLP in mind and started to search for some materials. Then I came across the recommendation of Kevin's [PyCon 2016 video](https://www.youtube.com/watch?v=ZiKMIuYidY0). <br><br>As mentioned the by people recommended, it's a great video with Kevin's awesome presentation and explaination of the concepts and details. He summerises the framework of sklearn modelling: import->instantiate->fit->predict. He elaborates the intuitive of text ana;ysis example: 'for this text analysis, sklearn doesn't know what we are analysing. We converted all documents with numeric representation (word count). Thus, any classification model can be used with text problems'. He explains the small details along the way such as why the X and y in sklearn are usually in caps and small letters respectively (matrix vs. vector) and also the usage of Jupyter notebook. <br><br>\n",
-    "I spent a few days to watch his video and type along the codes. It helped me to get started with sklearn, text analysis as well as pandas and Jupyter notebook.<br><br>\n",
+    "I spent a few days to watch his video and [typed along the codes](https://github.com/sz3g12/Python/blob/master/Machine%20Learning%20with%20Text%20in%20scikit-learn%20(PyCon%202016).ipynb). It helped me to get started with sklearn, text analysis as well as pandas and Jupyter notebook.<br><br>\n",
     "The example in the video is the prediction of ham and spam messages. Firstly, the data is split into train and test data and the train texts are broken down into bag of words. Then the training data are transformed to document-term-matrix. Afterwards, the training data are fitted to predict the results. we need to split before vectorizing becuase: \n",
-    "1.the corpus is too large if we don't split first (i.e. train and test togather) 2. to simulate the real world, the test set won't know all the featues the training sets have. Later, the model evaluation and model comparisions are performed. There are also some fun inspections done, such as what are the words that have high spamminess and what are the spam to ham ratio of each word. Lastly, he covers the basic logic of Naive bayes (conditional probability), which is used in this example and he mentioned about the typical tunning parameters in such analysis. "
+    "1.the corpus is too large if we don't split first (i.e. train and test togather) 2. to simulate the real world, the test set won't know all the featues the training sets have. Later, the model evaluation and model comparisions are performed. There are also some fun inspections done, such as what are the words that have high spamminess and what are the spam to ham ratio of each word. Lastly, he covers the basic logic of Naive bayes (conditional probability), which is used in this example and he mentioned about the typical tunning parameters in such analysis. <br><br>\n",
+    "I also set up the github repo called [Python](https://github.com/sz3g12/Python) to host the codes."
    ]
   },
   {
@@ -114,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 25 | Starting this Notebook for Recording"
+    "## Day 25 | Starting this Notebook for Recording"
    ]
   },
   {
@@ -129,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 26 | Coursera Machine Learning (Done for Week 1)"
+    "## Day 26 | Coursera Machine Learning (Done for Week 1)"
    ]
   },
   {
@@ -143,6 +144,66 @@
     "I added a portion in my previous gradient descent for linear regression codes - to compare the MSEs of the gradient descent model vs. default sklearn model. As it turned out, the default model still outperforms the gradient descent model by a little bit. <br><br>\n",
     "As Andrew's programming assignemnts for the ML course is based on Octave and Matlab, which I don't intend to learn, I tried to explore whether it's feasible to do the assignments with Python istead. I found that there are already [articles](https://towardsdatascience.com/andrew-ngs-machine-learning-course-in-python-linear-regression-dd04fba8e137) and [github repos](https://github.com/dibgerge/ml-coursera-python-assignments/tree/master/Exercise1) about the assignments done in Python. Thus, I will do my one in Python also and I can choose the well written codes as my reference. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 27 | Coursera Machine Learning (Week 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finished [Week 2 materials](https://d3c33hcgiwev3.cloudfront.net/_7532aa933df0e5055d163b77102ff2fb_Lecture4.pdf?Expires=1591142400&Signature=GY2YvtnoTgS98JX8N2G09edtiaYvvC9YJZx6MW8nkK32npyFpjpo3KbgEXm9L7dziQ1qxoxCEn9DnBjHJCUohGDvwF0-SrkAruwKqpb~sXojA18~aquzQXZ8IXCe0f~ASHoyZcNbFDov73ID2WdizTxZWRAJJr2HsNoNkDL54xc_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A). Learnt about gradient descent for linear regression with multiple variables. Andrew elaborated on the two ways to speed up the gradient descent - feature scaling (e.g. mean normalization) and adjusting learning rate. He also taught another algorithm for solving the ilnear regression with multiple varaibles - Normal Equation. It solves the result of theta analytically (formula), which does not require adjusting the learning rate nor go on iterations. Andrew did not go into how the calculatition is worked out, so I browsed addtional materials about it. [This video](https://www.youtube.com/watch?v=w3b2DCP78Xs) is a good one that explains the formula in projection point of view. Lastly, he compared gradient descent and normal equation algorithms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Started on the week 2 assignment with Python. Haven't figured out how to submit the assignment. I am referring more to the [medium article](https://towardsdatascience.com/andrew-ngs-machine-learning-course-in-python-linear-regression-dd04fba8e137) than the github repo I found as many of the codes in that github repo do not work for me."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 28 | Coursera Machine Learning (Week 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Worked on the exercise (basically still typing along). Found [another github repo](https://github.com/andrewenoble/machine-learning-andrew-ng/blob/master/ex1_linear_regression/ex1a_univariate.ipynb) that provides more efficient codes than the medium article. Now referring from both sources. \n",
+    "Practised matrix operations (append, transpose, multiplication), function definition (cost function and and gradient descent) and matplotlib in this exercise. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 29 | Standford NLP Course"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jumped to NLP related materials. Chose the Standford NLP course (previously on Coursera but has been taken down), which was recommended in Kevin's github. Found the [slide materials](https://web.stanford.edu/~jurafsky/NLPCourseraSlides.html) and the [course videos](https://www.youtube.com/playlist?list=PLQiyVNMpDLKnZYBTUOlSI9mi9wAErFtFm). <br><br>\n",
+    "Watched the videos of Lecture 1 and 2: Introductioin and Basic Text Processing.<br><br>\n",
+    "[Lecture 1](http://spark-public.s3.amazonaws.com/nlp/slides/intro.pdf) introduced the applications with NLP and the current progress (e.g. span detection, NER and POS tagging are mostly solved; sentiment analysis, machine translation and information extraction are in good progress, while question answering, paraphrasing, summarization and dialogy are still very hard). What makes NLP hard including ambiguity, non-standard usage, neologism, idioms etc. To tackle these issues, we need more knowledge about language, the world and a way to combine knowledge source. <br><br>\n",
+    "[Lecture 2](http://spark-public.s3.amazonaws.com/nlp/slides/textprocessingboth.pdf) introduced the text processing methods, including regular expressions (there is a good tool [RegexPal](https://www.regexpal.com/) to test out the regular expression), word tokenization (issues with tokenization; maximum matching word segmentation algorithm for Chinese language), word normalization (case folding and lemmatization) and stemming (a cruder version of lemmatization; Porter's algorithm is the most common English stemmer). It also introduced how to use decision tree (classification methods) to segment sentences (intuition: e.g. with a lot of blanks after is likely to be EOS | with ? or ! is likly to be EOS. * Final punctuation is period does not necessarily indicates EOS as there are cases such as '0.02', '.etc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
