--- a/N Days of Data Science.ipynb
+++ b/N Days of Data Science.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 29 | Standford NLP Course"
+    "## Day 29 | Standford NLP Course (Lecture 1 and 2)"
    ]
   },
   {
@@ -195,15 +195,42 @@
     "Jumped to NLP related materials. Chose the Standford NLP course (previously on Coursera but has been taken down), which was recommended in Kevin's github. Found the [slide materials](https://web.stanford.edu/~jurafsky/NLPCourseraSlides.html) and the [course videos](https://www.youtube.com/playlist?list=PLQiyVNMpDLKnZYBTUOlSI9mi9wAErFtFm). <br><br>\n",
     "Watched the videos of Lecture 1 and 2: Introductioin and Basic Text Processing.<br><br>\n",
     "[Lecture 1](http://spark-public.s3.amazonaws.com/nlp/slides/intro.pdf) introduced the applications with NLP and the current progress (e.g. span detection, NER and POS tagging are mostly solved; sentiment analysis, machine translation and information extraction are in good progress, while question answering, paraphrasing, summarization and dialogy are still very hard). What makes NLP hard including ambiguity, non-standard usage, neologism, idioms etc. To tackle these issues, we need more knowledge about language, the world and a way to combine knowledge source. <br><br>\n",
-    "[Lecture 2](http://spark-public.s3.amazonaws.com/nlp/slides/textprocessingboth.pdf) introduced the text processing methods, including regular expressions (there is a good tool [RegexPal](https://www.regexpal.com/) to test out the regular expression), word tokenization (issues with tokenization; maximum matching word segmentation algorithm for Chinese language), word normalization (case folding and lemmatization) and stemming (a cruder version of lemmatization; Porter's algorithm is the most common English stemmer). It also introduced how to use decision tree (classification methods) to segment sentences (intuition: e.g. with a lot of blanks after is likely to be EOS | with ? or ! is likly to be EOS. * Final punctuation is period does not necessarily indicates EOS as there are cases such as '0.02', '.etc')"
+    "[Lecture 2](http://spark-public.s3.amazonaws.com/nlp/slides/textprocessingboth.pdf) introduced the text processing methods, including regular expressions (there is a good tool [RegexPal](https://www.regexpal.com/) to test out the regular expression), word tokenization (issues with tokenization; maximum matching word segmentation algorithm for Chinese language), word normalization (case folding and lemmatization) and stemming (a cruder version of lemmatization; Porter's algorithm is the most common English stemmer). It also introduced how to use decision tree (classification methods) to segment sentences (intuition: e.g. with a lot of blanks after is likely to be EOS | with ? or ! is likly to be EOS. * Final punctuation is period does not necessarily indicates EOS as there are cases such as '0.02', '.etc') <br><br>\n",
+    "Finished the last bit of Machile Learning Week 2 exericise (fancy plots with the codes I don't understand)."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Day 30 | NLP and ML (Lecture 3 and Week 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Watched videos for NLP [Lecture 3](http://spark-public.s3.amazonaws.com/nlp/slides/med.pdf), minimum edit distance. It's used in spelling check and computation biology. It calculats the least distances from one word/string to another. It can also be used to evaluate machine translation and sppech recognition. The way to do it is to search for the minimum distance from initial state to final stage by using operations such as insertion, deletion and substitution. Then the path cost is calculated.The minimum edit distance can be weighted as some letters are more likely to be mistyped than others (e.g. a and e, m and n: easily being misspelt, j and k, o and p: next to each other on keyboard). There is confusion matrix for spelling errors. Sometimes edit distance is not sufficient and we need to find alighment of the two strings to each other. This can be done by keeping a backtrace. From the backtrace mapping, we can see which letters are matched to get the alignment.<br><br>\n",
+    "Watched part 1 of Week 3 ML - [logistic regression](https://d3c33hcgiwev3.cloudfront.net/_964b8d77dc0ee6fd42ac7d8a70c4ffa1_Lecture6.pdf?Expires=1591315200&Signature=hRwpiMeYovPqrQDrxBQFYXNQK8Dibp-7kTIEoSgDoXcead~RgnRwQgye7EYhq7QltZcDDBVywwqTokSGmGeobNwuXaeSAeKesOva6o2Bk48IjnO3grBQgCDu-oTusLMzeIvCioiXPw5ri1-rh0-sV9o0zbR~ZRTVL9uTf2v4tDw_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A). A concept that imterested me is 'decision boundary': for the signoid function h(x) = g(z), when z>0, g(z)>0.5. If we take the threshold of 0.5, there is a conclusion that z>0->y = 1. With this in mind, we are able to draw the linear and non-linear decision boundary for logistic regressions if we know the theta values. Another interesting learning is the cost founction of logistic regression: it captures the intiution that when y = 1 and h(x) = 1, cost = 0, while when y = 1 and h(x)->0, cost -> inf (same for the other way around). We need to keep in mind that y equals to either 0 or 1 in logistic regression. <br><br>\n",
+    "Andrew mentioned that the cost function of logistic regression is derived with maximum likelihood method but he didn't go into depth. I googled maximum likelihood and found a video in this channel: [StatQuest](https://www.youtube.com/watch?v=XepXtl9YKwc). I like his explanations and the songs in the begining. I probably will watch more of his other videos when looking for stats concept explnations. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 31 | ML Course (Done with Week 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finished the week 3 of ML. The final part explained about the overfitting issue and how it can be tackled. In this part, I finally got to know the concepts of [bias and variance and also the regularization](https://d3c33hcgiwev3.cloudfront.net/_7d030d67103ce0e7f39dee1d7f78525c_Lecture7.pdf?Expires=1591401600&Signature=Nha0Iccdg-EO6jbh92n5CKpwmq0m0hEBChts6yaFQH8l1M4WOSU0MgSelu08fzg-dwPcz7KBm0IJoW4fAf8HutIIwk~zwUNWaSqIdE3dgYpnPxsrWiOUAJ4woUuqy~PRidXjN1t1hEPPcbCNf6y6hNOvXjq8wAJ0xXF1HFm9Aus_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A).<br><br>\n",
+    "Now I understand the reason that Ng started the lectures with cost function (which scared me away twice). It's indeed the fundamental of the machine learning. The ojective of machine learning is alweay about having better fitting - i.e. minimise the cost function. The concept of regularization is about having reasonably low bias but also avoid over complicated model (because it wwill have high variance). Thus, we introduce penalty to the cost function to achieve this (penelizing large / too many thetas). It works for both gradient descent and normal equation. <br><br>\n",
+    "The regularization introduced by Ng is Ridge regression, which adds $\\lambda\\theta^2$ to the cost function. As I remember there are two common ones, L1 and L2, I looked up StatQuest for more details. Again, StatQuest did a great job explaining and there are the videos: [Ridge Regression](https://www.youtube.com/watch?v=Q81RR3yKn30) and [Lasso Regression](https://www.youtube.com/watch?v=NGf0voTMlcs&t=409s). As he summarizes, regularization is essentially 'desensitization. It smooths the curves to give better generalization of training models to be used in test data. He mentioned that Ridge regression can also solve the problem of 'no. of samples < no. of variables' when used together with cross validation. Since he mentioned cross validation, I also watched his video about [cross validation](https://www.youtube.com/watch?v=fSytzGwwBVw). His videos are so good. I can't wait to watch more together with the lecture videos. <br><br>\n",
+    ">There are a lot of terms that I have always knew about but never understod. e.g. variance, bias, regularization, learning rate and all. I am happy that I am getting to know them one by one. It's fulfilling. As Andrew said 'You've actually come a long ways. And you can actually, you actually know enough to apply this stuff and get to work for many problems.'. I am glad that I finally get started in going into depth in studying machine learning."
+   ]
   }
  ],
  "metadata": {
