--- a/N Days of Data Science.ipynb
+++ b/N Days of Data Science.ipynb
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 26 | Coursera Machine Learning (Done for Week 1)"
+    "## Day 26 | Coursera Machine Learning (Done with Week 1)"
    ]
   },
   {
@@ -230,6 +230,61 @@
     "Now I understand the reason that Ng started the lectures with cost function (which scared me away twice). It's indeed the fundamental of the machine learning. The ojective of machine learning is alweay about having better fitting - i.e. minimise the cost function. The concept of regularization is about having reasonably low bias but also avoid over complicated model (because it wwill have high variance). Thus, we introduce penalty to the cost function to achieve this (penelizing large / too many thetas). It works for both gradient descent and normal equation. <br><br>\n",
     "The regularization introduced by Ng is Ridge regression, which adds $\\lambda\\theta^2$ to the cost function. As I remember there are two common ones, L1 and L2, I looked up StatQuest for more details. Again, StatQuest did a great job explaining and there are the videos: [Ridge Regression](https://www.youtube.com/watch?v=Q81RR3yKn30) and [Lasso Regression](https://www.youtube.com/watch?v=NGf0voTMlcs&t=409s). As he summarizes, regularization is essentially 'desensitization. It smooths the curves to give better generalization of training models to be used in test data. He mentioned that Ridge regression can also solve the problem of 'no. of samples < no. of variables' when used together with cross validation. Since he mentioned cross validation, I also watched his video about [cross validation](https://www.youtube.com/watch?v=fSytzGwwBVw). His videos are so good. I can't wait to watch more together with the lecture videos. <br><br>\n",
     ">There are a lot of terms that I have always knew about but never understod. e.g. variance, bias, regularization, learning rate and all. I am happy that I am getting to know them one by one. It's fulfilling. As Andrew said 'You've actually come a long ways. And you can actually, you actually know enough to apply this stuff and get to work for many problems.'. I am glad that I finally get started in going into depth in studying machine learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 32 | ML Course (Done with Week 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finished the Week 4 ML - [neural network introduction](https://d3c33hcgiwev3.cloudfront.net/_48018e8190fedff87b572550690056d2_Lecture8.pdf?Expires=1591574400&Signature=TL7xY2nOORSC~1kdHWQYVLs7dxoDdpC45ISXIOVhJNvx6j8MlLFxR7WkDuNwlfkHEKk5ORb~PuNRAXd-HvDw2GdhdMib84wWt1Nd8U1Aej1bCGC8FlBXsv85uG3C2Db-Pmx9eVcLu2vaWe1bSSyAoIiRQcu0mjPNBzwuWEVmUtE_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A). Ng introduced the model representation and initution of neural network. As clear as he explained, I think I still need to digest for a while and maybe source for other materials too. The idea I grasped is that the nueral network imitates the network of neurons that receive signals (inputs) from other neurons and transmit the signals until the info reaches the output layer (e.g. feedback to brain). So there are input layer, hidden layer and output layer. At each layer, there are connections and weights assigned to connections (THETA). There is also bias unit, which is similar to the $x_0$ in our funcions. The supercript in the $\\alpha_{1}^{(2)}$ indicates the second layer and the 1 inthe subscript means the 1st element in the array. <br><br>\n",
+    "The activation function used in the examples is sigmoid function, which give activation value of (0, 1) and we can use it to contruct logical functions. <br><br>\n",
+    "After the coursera lecture, I thought that I need to go back to some coding practise and I jumped to Kevin's [video series about sklearn](https://www.youtube.com/playlist?list=PL5-da3qGB5ICeMbQuqbbCOQWcS6OYBr5A). One thing I like about Kevin, except for this good presentation, is that he always recomend useful resources. I quickly went through his intro videos about [sklearn and Jupyter setup](https://github.com/justmarkham/scikit-learn-videos/blob/master/02_machine_learning_setup.ipynb) and [Iris dataset intro](https://github.com/justmarkham/scikit-learn-videos/blob/master/03_getting_started_with_iris.ipynb). He explained the differences of using [Python/sklearn vs. R for machine learning](https://www.dataschool.io/python-or-r-for-data-science/) and said that sklearn has slightly steeper learning curve in the start and it focuses more on accuracy than explinability as compared to R (which looks at ML from a more stats point of view). Found a good video/deck about '[Fast numerical computing with NumPy](https://speakerdeck.com/jakevdp/losing-your-loops-fast-numerical-computing-with-numpy-pycon-2015)' and went through the deck. Will watcht the [video](https://www.youtube.com/watch?v=EEUXKG97YRw) tomorrow.<br><br>\n",
+    "Worth to mention that the video is also from PyCon. Seems like I should watch more good videos from that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 33 | Kevin's sklearn videos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Today I watched the video of the '[Fast numerical computing with NumPy](https://www.youtube.com/watch?v=EEUXKG97YRw)'. The deck was actually quite self-explainatory. It demostrated how is NumPy faster than Python loops and what are the useful applications for speeding up the computation using NumPy. The four strategies mentioned by the speaker to speed up with NumPy are 1.ufunc 2. aggregation 3. broadcasting 4. slicing, masking and fancy indexing. I have already knew about 1, 2 and 4 from Pandas coding practises; so I watched the video mostly focusing on the NumPy brodcasting application and the KNN example explaination. \n",
+    ">The term broadcasting describes how numpy treats arrays with different shapes during arithmetic operations. Subject to certain constraints, the smaller array is “broadcast” across the larger array so that they have compatible shapes. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To deepen my understanding, I read this [NumPy article](https://numpy.org/devdocs/user/theory.broadcasting.html) that explains the broadcasting with graphs. Basically, if two metrices can 'match', they can still have arithmetic opreations even if they are in the different sizes. The smaller one can be \"enlarged\" to match the bigger one.The KNN example is a good application for broadcast that can reduce the operations for calculating the Euclidean distance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I watched a few of Kevin's videos, which gave intro about training and evaluating machine learning models. He summarized the sklearn ML framework, fit a classification model with KNN and logistic regression and explained the upsides and downsides of train/test split method (which can be overcame with cross validation). He recommended an article about [Bias and Variance tradeoff](http://scott.fortmann-roe.com/docs/BiasVariance.html) with KNN model as example. I am yet to read it. I also come across this mindmap of [sklearn model choice cheatsheet](https://www.oreilly.com/content/wp-content/uploads/sites/2/2019/06/scikit-learn-flow-chart-5d2262f1051e76f9a17e2c6cb451335e.jpg) for future use.\n",
+    "<br><br>\n",
+    "Lastly, I watch a couple of [fun videos about KNN](https://www.youtube.com/watch?v=MDniRwXizWo), including my favorite [StatQuest](https://www.youtube.com/watch?v=HVXime0nQeI), as I didn't know about it and confused it with k-means.So KNN is a method to clasify the samples based on the k nearest neighbors. i.e. if the people closest surrounding you are A, then you are A. k is the no. of the nearest neighbors the models will take to decide which class you belong to. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 34 | Kevin's sklearn videos (Done)"
    ]
   }
  ],
