added in cv and gridsearch

--- a/Misc.ipynb
+++ b/Misc.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "%pwd  #look at the current work dir\n",
     "import os\n",
-    "os.chdir('C:/Users/zhangxinhua/Desktop/Python/Theory/Machine Learning/Andrew Ng Coursera/Exercises/machine-learning-ex1/ex1') "
+    "os.chdir('C:/Users/zhangxinhua/Desktop/Python') "
    ]
   },
   {
@@ -36,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -66,20 +68,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"printing from the shell\"\n"
-     ]
-    }
-   ],
    "source": [
-    "echo \"printing from the shell\""
+    "<img src=\"image.JPG\" alt=\"Drawing\" style=\"width: 200px;\"/>"
    ]
   }
  ],
