--- a/N Days of Data Science.ipynb
+++ b/N Days of Data Science.ipynb
@@ -277,14 +277,102 @@
    "source": [
     "I watched a few of Kevin's videos, which gave intro about training and evaluating machine learning models. He summarized the sklearn ML framework, fit a classification model with KNN and logistic regression and explained the upsides and downsides of train/test split method (which can be overcame with cross validation). He recommended an article about [Bias and Variance tradeoff](http://scott.fortmann-roe.com/docs/BiasVariance.html) with KNN model as example. I am yet to read it. I also come across this mindmap of [sklearn model choice cheatsheet](https://www.oreilly.com/content/wp-content/uploads/sites/2/2019/06/scikit-learn-flow-chart-5d2262f1051e76f9a17e2c6cb451335e.jpg) for future use.\n",
     "<br><br>\n",
-    "Lastly, I watch a couple of [fun videos about KNN](https://www.youtube.com/watch?v=MDniRwXizWo), including my favorite [StatQuest](https://www.youtube.com/watch?v=HVXime0nQeI), as I didn't know about it and confused it with k-means.So KNN is a method to clasify the samples based on the k nearest neighbors. i.e. if the people closest surrounding you are A, then you are A. k is the no. of the nearest neighbors the models will take to decide which class you belong to. "
+    "Lastly, I watch a couple of videos about KNN from my favorite [StatQuest](https://www.youtube.com/watch?v=HVXime0nQeI) and this new amazing channel [Fun and Easy Machine Learning](https://www.youtube.com/watch?v=MDniRwXizWo). So KNN is a method to clasify the samples based on the k nearest neighbors. i.e. if the people closest surrounding you are A, then you are A. k is the no. of the nearest neighbors the models will take to decide which class you belong to. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 34 | Kevin's sklearn videos (Done)"
+    "## Day 34 - 35 | Kevin's sklearn videos (Done)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finished watching kevin's playlist of sklearn videos. Useful takeaways include [cross validation](https://github.com/justmarkham/scikit-learn-videos/blob/master/07_cross_validation.ipynb) and [GridSearch](https://github.com/justmarkham/scikit-learn-videos/blob/master/08_grid_search.ipynb). Finally understood what we have done in the previous project. Also reviewed the [linear regression](https://github.com/justmarkham/DAT5/blob/master/notebooks/09_linear_regression.ipynb) and logistic regression with sklearn as well as [model evaluation for classification model](https://github.com/justmarkham/scikit-learn-videos/blob/master/09_classification_metrics.ipynb) (which contains a lot of info about confusion matrix, auc, precision and recall etc,). Except for sklearn, there is also statsmodels.formula.api for modelling, which provides more summary stats. <br><br>\n",
+    "I found this series quite helpful in getting an idea of the framework of applying sklean - from training the model to model tunning, feature selction and model evaluation. More details could be learn from the practical projects. I typed along the codes to have a reference for myself - [Machine learning - Data School](https://github.com/sz3g12/Python/blob/master/Machine%20Learning%20-%20Data%20School.ipynb). I should definitely finish more of his [video series](https://www.dataschool.io/start/) when I have time. <br><br>\n",
+    "I also watched Ng's week 5 video about backpropagation. I watched until my eyes are closed..I will try again tomorrow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 36 - 37 | Kaggle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Started Kaggle titanic. On Day 36, did majority of the data processing in Python without copying the code (write by myself/find info from google). On Day 37, did the first version of LR and got 77%. Encountered issue with trying randon forest (as it turning out, I wrongly used RandomForrestRegressor, not Classifier. \n",
+    "I applied pipleline from [Kevin's notebook](https://github.com/justmarkham/scikit-learn-videos/blob/master/10_categorical_features.ipynb) and I found the function make_columns and pipeline very useful."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 38 | Kaggle + Week 6 ML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figured out the rf issue and fit the model with default rf and svm model. The training cv results are slightly better than logreg while the test results are wrose off. This might be overfitting issue and need parameter tunning. I should reading more articles from the forums and try understand the tune more parameters as well as trying out other methods such as xgboost, decision tree, neural network.\n",
+    "\n",
+    "Just when I have no idea about where to go about for tuning the model, I realised that the week 6 ML video is about [Machine learning diagnostic](https://d3c33hcgiwev3.cloudfront.net/_b0cf48c6b7bc9f194310e6bc90dec220_Lecture10.pdf?Expires=1592179200&Signature=GUSDrujjKZnq2ILLSeFWd5VmLPKu9zj~yn8rgwOaglmixzsLcaen2edqWCESANfgE3c9eRsBjoWRxldfqUysvQcSBybtqZrSKyU5GXbuCXJ7DS3EOZEvnjchl5kpTzhTs6erlI1a6KyEUdSTjZuZN4CsyDpfFqiH4e45189RSFI_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A)! It's very useful in giving us a few directions in improving the model. \n",
+    "1st tip is that, we should always have a validation/cv set, or else the test set accuracy is also biased as we try to minimize the error on that when evaluation and tunning the model\n",
+    "2nd is that we can look at the error reduction from the high bias and high variance point of views by comparing the errors of train vs. cv sets / test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 39 | Rest day "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rest day due to personal reasons, will try resume tomorrow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 40 | Week 6 ML - Machine learning diagnostic\n",
+    "\n",
+    "First the machine learning diagnostic part and got 100 marks for review questions for the first time. It's very interesting. Firstly, when we want to decide on the $\\lambda$ value, we can plot out the curve for train and cv sets at different $\\lambda$ values. With smaller $\\lambda$, the training error is small and cv error is large. Then the training error will keep increasing as $\\lambda$ reduces the overfit on train. The errors on cv will go down first and then go up, as too high a $\\lambda$ will result in high bias for cv set too.\n",
+    "He also talked about how to identify whether the model suffers from high bias or high variance by checking the learning curves: i.e. how will the training and cv errors change after gradually adding more training data into the model. In return, with such info, we are able to debugging the learning algorithm. e.g. if it's high bias, adding more training data will not help. We can try decreasing $\\lambda$ or adding polynomial features. if it's high varaince, we can increase $\\lambda$, adding more sample data or choose smaller sample of features. \n",
+    "\n",
+    "Found more of Kevin's notebooks about sklearn. e.g. [emsembling](https://github.com/justmarkham/DAT5/blob/master/notebooks/17_ensembling.ipynb) and [bayes](https://github.com/justmarkham/DAT5/blob/master/notebooks/13_bayes_iris.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 41 | Week 6 ML - machine learning work flow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The last part of week 6 ML is also super useful. It's about [how to work on a machine learning model](https://d3c33hcgiwev3.cloudfront.net/_bfa875d182c5d3c11e9a44e72b1e0f49_Lecture11.pdf?Expires=1592265600&Signature=GQzwr~gdO~q1m6Qyj-tvU~WiIMvduZv1gW1wsw3VAggUbMrcilriMcDYQSun81TkOVwOYvngUpu7NQwJN1hINOtTRk3zCgd7pPGOmQyOQm8xl1t-n4pzjASI-vM-vpO76FufSneLQbJC-vRLL8HJP0jBD7Kkyqd9BSSz7IeZN3I_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A). Ng advised that we start off building a quick and dirty model and then plot out the learning curve to have a sense of the direction - more data or more features, regularization? After that, we manually go through the errors from the cv set to check whether there are any systematic trend on errors and what could be potetial feature that can be added to improve the score. Then we can gradually improve the model with different method with a single value metric tp evaluate.\n",
+    "\n",
+    "Then he talked about precision and recall which I already knew, thanks to the project last time. And I finally remembered the formula of F1 score. \n",
+    "\n",
+    "He also explained the large data rationale - why and in what circumistances that the model performance would always increase when you add more training data.It works when the features have enough info to predict y accurately (you can know this by asking yourself - whehter an expert would be able to predict the outcome knowing the features) and the model has enough number of features (complex enough). \n",
+    "\n",
+    "I shall try tunning the titanic model tomorrow. e.g. adding in regulation terms, scale fare var etc."
    ]
   }
  ],
